@@ -15,6 +15,7 @@ import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.*;
 import java.net.URLDecoder;
@@ -32,7 +33,7 @@ public abstract class HandlerBase implements HttpHandler {
         }
     }
 
-    private static final Logger LOGGER = LogManager.getLogger();
+    protected static final Logger LOGGER = LogManager.getLogger();
 
     MinecraftServer mcServer;
     public HandlerBase(MinecraftServer mcServer) {
@@ -54,12 +55,12 @@ public abstract class HandlerBase implements HttpHandler {
             outputStream.write(responseBytes);
             outputStream.close();
 
-//            LOGGER.log(Level.ERROR, e.message);
+            LOGGER.log(Level.ERROR, e.message);
         } catch (Exception e) {
             // create a response string with stacktrace
             String stackTrace = ExceptionUtils.getStackTrace(e);
 
-            String responseString = String.format("Internal server error: %s\n%s", e.toString(), stackTrace);
+            String responseString = String.format("Internal server error: %s\n%s", e, stackTrace);
             byte[] responseBytes = responseString.getBytes(StandardCharsets.UTF_8);
             Headers headers = httpExchange.getResponseHeaders();
             headers.set("Content-Type", "text/plain; charset=UTF-8");
@@ -74,10 +75,20 @@ public abstract class HandlerBase implements HttpHandler {
         }
     }
 
-    public ServerLevel getServerLevel() {
-        return getServerLevel(null);
-    }
-
+    /**
+     * Get specific level (sometimes called a "dimension") of a Minecraft world.
+     * In a conventional Minecraft world the following levels are expected to be
+     * present: {@code "overworld"}, {@code "the_nether"} and {@code "the_end"}.
+     * A world may be modified to have a different list of levels.
+     *
+     * @param levelName     name of level as it's path name appears in world's
+     *                      list of levels. For convenience "the_nether" and
+     *                      "the_end" can be shorted to "nether" and "end"
+     *                      respectively but still return the same level.
+     *                      If no level with the given name is found or if the
+     *                      given name is {@code null}, return the overworld.
+     * @return              A level on {@link #mcServer}
+     */
     public ServerLevel getServerLevel(String levelName) {
         if (levelName != null) {
             levelName = levelName.toLowerCase();
@@ -93,11 +104,66 @@ public abstract class HandlerBase implements HttpHandler {
         return mcServer.overworld();
     }
 
+    /**
+     * Method that an endpoint handler class can use for executing a function.
+     *
+     * @param httpExchange  HTTP request exhanger
+     * @throws IOException  Any errors caught should be dealt with in {@link #handle(HttpExchange)}.
+     */
     protected abstract void internalHandle(HttpExchange httpExchange) throws IOException;
 
-    protected static void addDefaultHeaders(Headers headers) {
+    protected static String getHeader(Headers headers, String key, String defaultValue) {
+        List<String> list = headers.get(key);
+        if(list == null || list.size() == 0)
+            return defaultValue;
+        else
+            return list.get(0);
+    }
+
+    /**
+     * @param header single header as string from request or response headers
+     * @return {@code true} if header string has a common description of a JSON Content-Type.
+     */
+    protected static boolean hasJsonTypeInHeader(String header) {
+        return header.equals("application/json") || header.equals("text/json");
+    }
+
+    /**
+     * Helper to add basic headers to headers of a response.
+     *
+     * @param headers request or response headers
+     */
+    protected static void addDefaultResponseHeaders(Headers headers) {
         headers.add("Access-Control-Allow-Origin", "*");
         headers.add("Content-Disposition", "inline");
+    }
+
+    /**
+     * Helper to tell clients that response is formatted as JSON.
+     *
+     * @param headers request or response headers
+     */
+    protected static void addResponseHeadersContentTypeJson(Headers headers) {
+        headers.add("Content-Type", "application/json; charset=UTF-8");
+    }
+
+    /**
+     * Helper to tell clients that response is formatted as plain text.
+     *
+     * @param headers request or response headers
+     */
+    protected static void addResponseHeadersContentTypePlain(Headers headers) {
+        headers.add("Content-Type", "text/plain; charset=UTF-8");
+    }
+
+    /**
+     * Helper to tell clients that response is in a binary format that should be treated as an attachment.
+     *
+     * @param headers request or response headers
+     */
+    protected static void addResponseHeadersContentTypeBinary(Headers headers) {
+        headers.add("Content-Type", "application/octet-stream");
+        headers.add("Content-Disposition", "attachment");
     }
 
     protected static void resolveRequest(HttpExchange httpExchange, String responseString) throws IOException {
@@ -112,14 +178,12 @@ public abstract class HandlerBase implements HttpHandler {
         outputStream.close();
     }
 
-    protected static String getHeader(Headers headers, String key, String defaultValue) {
-        List<String> list = headers.get(key);
-        if(list == null || list.size() == 0)
-            return defaultValue;
-        else
-            return list.get(0);
-    }
-
+    /**
+     * Parse URL query string from {@code httpExchange.getRequestURI().getRawQuery()} into a convenient Map.
+     *
+     * @param qs    Any string, preferably the query section from an URL.
+     * @return      Map of String-String pairs.
+     */
     protected static Map<String, String> parseQueryString(String qs) {
         Map<String, String> result = new HashMap<>();
         if (qs == null)
@@ -133,24 +197,30 @@ public abstract class HandlerBase implements HttpHandler {
 
             if (next > last) {
                 int eqPos = qs.indexOf('=', last);
-                try {
-                    if (eqPos < 0 || eqPos > next)
-                        result.put(URLDecoder.decode(qs.substring(last, next), "utf-8"), "");
-                    else
-                        result.put(URLDecoder.decode(qs.substring(last, eqPos), "utf-8"), URLDecoder.decode(qs.substring(eqPos + 1, next), "utf-8"));
-                } catch (UnsupportedEncodingException e) {
-                    throw new RuntimeException(e); // will never happen, utf-8 support is mandatory for java
-                }
+                if (eqPos < 0 || eqPos > next)
+                    result.put(URLDecoder.decode(qs.substring(last, next), StandardCharsets.UTF_8), "");
+                else
+                    result.put(URLDecoder.decode(qs.substring(last, eqPos), StandardCharsets.UTF_8), URLDecoder.decode(qs.substring(eqPos + 1, next), StandardCharsets.UTF_8));
             }
             last = next + 1;
         }
         return result;
     }
 
+    /**
+     * Helper to create a {@code CommandSourceStack}, which serves as the source to dispatch
+     * commands from (See {@link CommandHandler}) or as a point of origin to place blocks
+     * relative from (See {@link BlocksHandler}).
+     *
+     * @param name          Some unique identifier.
+     * @param mcServer      The Minecraft server in which the {@code CommandSourceStack} is going to be placed.
+     * @param dimension     The dimension (also known as level) on the world of {@code mcServer} in which the {@code CommandSourceStack} is going to be placed.
+     * @return              An instance of {@code CommandSourceStack}.
+     */
     protected CommandSourceStack createCommandSource(String name, MinecraftServer mcServer, String dimension) {
         CommandSource commandSource = new CommandSource() {
             @Override
-            public void sendSystemMessage(Component p_230797_) {
+            public void sendSystemMessage(@NotNull Component p_230797_) {
 
             }
 
